--- a/index4.html
+++ b/index4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="css/style1.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body><div id="test">
     <h1 id="lfouk"><span>ADA</span> Students feedback</h1>
